fixed styling of game so it doesnt get too big

--- a/src/components/Game/PickCard/PickCard.css
+++ b/src/components/Game/PickCard/PickCard.css
@@ -14,13 +14,13 @@
 }
 
 
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
+@media only screen and (min-device-width : 768px) {
         .pick-card {
-            min-height: 200px;
+            min-height: 245px;
         }
 
         .pick-header-row {
-            min-height: 105px;
+            min-height: 107px;
         }
     }
     
